native-apps/custom-yamls/grafana/qa-devops-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qa-devops-plugin-grafana-ing
  namespace: qa-grafana
spec:
  rules:
  - host: qaplumon.hanwhalife.com
    http:
      paths:
      - backend:
          serviceName: qa-grafana
          servicePort: 80
        path: /
